[gd_scene load_steps=12 format=3 uid="uid://cl8hegwcnorl4"]

[ext_resource type="Script" uid="uid://cln4qabxvl4y8" path="res://scripts/police_station/police_station_akt_2.gd" id="1_egs36"]
[ext_resource type="PackedScene" uid="uid://1lucnrhv7ixm" path="res://scenes/places/office.tscn" id="2_e5tjc"]
[ext_resource type="PackedScene" uid="uid://doisuir7v57ie" path="res://scenes/places/head_office.tscn" id="3_18lm3"]
[ext_resource type="PackedScene" uid="uid://h6fwhyygn64k" path="res://scenes/places/big_office.tscn" id="4_obfpf"]
[ext_resource type="PackedScene" uid="uid://dcc1qe6wb2fvg" path="res://scenes/places/tech_room.tscn" id="5_0tjtp"]
[ext_resource type="PackedScene" uid="uid://dm8xbmol5f8en" path="res://scenes/places/Kitchen.tscn" id="6_nha3d"]
[ext_resource type="Script" uid="uid://dcw8le38a2ymy" path="res://scripts/change_room_sys.gd" id="7_2wghv"]
[ext_resource type="Texture2D" uid="uid://hkjnjyf75j8w" path="res://assets/black.png" id="8_f6e8y"]
[ext_resource type="PackedScene" uid="uid://dinkb6rvbmkhj" path="res://scenes/helpsys.tscn" id="9_87bkb"]
[ext_resource type="Script" uid="uid://x0q12rag5ugd" path="res://scripts/police_station/computer_button_management_sys_2.gd" id="11_yflii"]
[ext_resource type="Script" uid="uid://dx6duges0f05t" path="res://scripts/police_station/rouer_button_management_sys_2.gd" id="12_e5tjc"]

[node name="PoliceStationAkt2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_egs36")

[node name="Office" parent="." instance=ExtResource("2_e5tjc")]
layout_mode = 1

[node name="HeadOffice" parent="." instance=ExtResource("3_18lm3")]
visible = false
layout_mode = 1

[node name="BigOffice" parent="." instance=ExtResource("4_obfpf")]
visible = false
layout_mode = 1

[node name="TechRoom" parent="." instance=ExtResource("5_0tjtp")]
visible = false
layout_mode = 1

[node name="Kitchen" parent="." instance=ExtResource("6_nha3d")]
visible = false
layout_mode = 1

[node name="Change_Room_Sys" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 592.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_2wghv")

[node name="Office_button_background" type="TextureRect" parent="Change_Room_Sys"]
layout_mode = 0
offset_left = 40.0
offset_right = 168.0
offset_bottom = 48.0
texture = ExtResource("8_f6e8y")
expand_mode = 1

[node name="Office_button" type="Button" parent="Change_Room_Sys/Office_button_background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Eigenes Büro"

[node name="Head_Office_button_background" type="TextureRect" parent="Change_Room_Sys"]
layout_mode = 0
offset_left = 192.0
offset_right = 320.0
offset_bottom = 48.0
texture = ExtResource("8_f6e8y")
expand_mode = 1

[node name="Head_Office_button" type="Button" parent="Change_Room_Sys/Head_Office_button_background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Chef Büro"

[node name="Big_Office_button_background" type="TextureRect" parent="Change_Room_Sys"]
layout_mode = 0
offset_left = 344.0
offset_right = 472.0
offset_bottom = 48.0
texture = ExtResource("8_f6e8y")
expand_mode = 1

[node name="Big_Office_button" type="Button" parent="Change_Room_Sys/Big_Office_button_background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Großes Büro"

[node name="Tech_Room_button_background" type="TextureRect" parent="Change_Room_Sys"]
layout_mode = 0
offset_left = 832.0
offset_top = -8.0
offset_right = 960.0
offset_bottom = 40.0
texture = ExtResource("8_f6e8y")
expand_mode = 1

[node name="Tech_Room_button" type="Button" parent="Change_Room_Sys/Tech_Room_button_background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Technik Raum"

[node name="Kitchen_button_background" type="TextureRect" parent="Change_Room_Sys"]
layout_mode = 0
offset_left = 984.0
offset_top = -8.0
offset_right = 1112.0
offset_bottom = 40.0
texture = ExtResource("8_f6e8y")
expand_mode = 1

[node name="Kitchen_button" type="Button" parent="Change_Room_Sys/Kitchen_button_background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Küche"

[node name="Helpsys" parent="." instance=ExtResource("9_87bkb")]
layout_mode = 1
hint_1_text = "Vielleicht findest du hinweise wenn du die technischen geräte untersuchst"
hint_2_text = "untersuche alle router"
hint_3_text = "Nachdem alle router untersucht wurden gehe ins Chefbüro und untersuche den router erneut"
Timer_hint_2_time = 45.0
Timer_hint_3_time = 90.0

[node name="computer_button_management_sys" type="Node" parent="."]
script = ExtResource("11_yflii")

[node name="rouer_button_management_sys" type="Node" parent="."]
script = ExtResource("12_e5tjc")

[connection signal="computer_pressed" from="Office" to="computer_button_management_sys" method="_on_office_computer_pressed"]
[connection signal="router_pressed" from="Office" to="rouer_button_management_sys" method="_on_office_router_pressed"]
[connection signal="computer_pressed" from="HeadOffice" to="computer_button_management_sys" method="_on_head_office_computer_pressed"]
[connection signal="router_pressed" from="HeadOffice" to="rouer_button_management_sys" method="_on_head_office_router_pressed"]
[connection signal="computer_1_pressed" from="BigOffice" to="computer_button_management_sys" method="_on_big_office_computer_1_pressed"]
[connection signal="computer_2_pressed" from="BigOffice" to="computer_button_management_sys" method="_on_big_office_computer_2_pressed"]
[connection signal="computer_3_pressed" from="BigOffice" to="computer_button_management_sys" method="_on_big_office_computer_3_pressed"]
[connection signal="router_1_pressed" from="BigOffice" to="rouer_button_management_sys" method="_on_big_office_router_1_pressed"]
[connection signal="router_2_pressed" from="BigOffice" to="rouer_button_management_sys" method="_on_big_office_router_2_pressed"]
[connection signal="router_3_pressed" from="BigOffice" to="rouer_button_management_sys" method="_on_big_office_router_3_pressed"]
[connection signal="electricity_box_pressed" from="TechRoom" to="." method="_on_tech_room_electricity_box_pressed"]
[connection signal="router_pressed" from="TechRoom" to="rouer_button_management_sys" method="_on_tech_room_router_pressed"]
[connection signal="computer_pressed" from="Kitchen" to="computer_button_management_sys" method="_on_kitchen_computer_pressed"]
[connection signal="router_pressed" from="Kitchen" to="rouer_button_management_sys" method="_on_kitchen_router_pressed"]
[connection signal="pressed" from="Change_Room_Sys/Office_button_background/Office_button" to="Change_Room_Sys" method="_on_office_button_pressed"]
[connection signal="pressed" from="Change_Room_Sys/Head_Office_button_background/Head_Office_button" to="Change_Room_Sys" method="_on_head_office_button_pressed"]
[connection signal="pressed" from="Change_Room_Sys/Big_Office_button_background/Big_Office_button" to="Change_Room_Sys" method="_on_big_office_button_pressed"]
[connection signal="pressed" from="Change_Room_Sys/Tech_Room_button_background/Tech_Room_button" to="Change_Room_Sys" method="_on_tech_room_button_pressed"]
[connection signal="pressed" from="Change_Room_Sys/Kitchen_button_background/Kitchen_button" to="Change_Room_Sys" method="_on_kitchen_button_pressed"]
